# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
# SPDX-FileCopyrightText: 2024, Felix Fontein
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "antsibull"
version = "0.0.1"
edition = "2021"
authors = ["Felix Fontein <felix@fontein.de>"]

[dependencies]
regex = "1"  # regular expressions
saphyr = "*"  # YAML parser
